2017-04-13  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java: table name is now public

2017-04-12  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java (LDrawLibDB): new test for full text index
	(initDB): removed useless full text index test 

2017-04-11  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java (getPart): Changed to return only one part, without warning or exception if there are duplicates

2017-04-07  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java (initDB): moved checks/creation of index on startup

2017-03-31  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java (endUpdate): changed order on create/delete index to avoid undesired open transaction commit
	(abortUpdate): changed order on create/delete index to avoid undesired open transaction commit
	(prepareUpdate): changed order on create/delete index to avoid undesired open transaction commit

2017-03-28  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/PartQueryable.java: moved to LDrawLib
	* src/bricksnspace/ldrawlib/ConnGrid.java: moved to LDrawLib
	* src/bricksnspace/ldrawlib/ConnectionHandler.java: moved to LDrawLib

2017-03-23  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java (refreshIndexes): new method to refresh indexes

2017-03-07  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawColor.java (getColorById): wrong blended color selection: fixed

2017-02-23  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java: Part database library
	* src/bricksnspace/ldrawlib/LDrawLib.java: Merged database functions inside library
	 
2017-02-17  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/ImportLDrawProjectTask.java: updated for stepper system chenges